css tweaks to fix headline letter spacing

--- a/react/src/App.scss
+++ b/react/src/App.scss
@@ -33,6 +33,7 @@
         color: $bg-color;
         font-weight: 700;
         line-height: 85%;
+        letter-spacing: -.5px;
     }
 
     
