--- a/react/style.css
+++ b/react/style.css
@@ -29,6 +29,7 @@
   color: #252c46;
   font-weight: 700;
   line-height: 85%;
+  letter-spacing: -0.5px;
 }
 
 header {
